<resources>
    <string name="app_name">Teoretické Základy Informatiky</string>
    <string name="title_activity_teoria_menu">TeoriaMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Formálne Jazyky</string>
    <string name="menu_gallery">Konečné Automaty</string>
    <string name="menu_slideshow">Zásobníkové Automaty</string>
    <string name="abeceda_vysvetlenie">Abecedou rozumieme neprázdnu konečnú množinu symbolov. Prvky abecedy nazývame písmená alebo tiež symboly abecedy. Symboly abecedy sú základné objekty, z ktorých budeme vytvárať zložitejšie štruktúry.
    </string>
    <string name="priklad_abeceda">1) ΣS = {a,á,ä,b,c,č,d,ď,e,é,f,g,h,ch,i,í,j,k,l,ĺ,ľ,m,n,ň, … } - slovenská abeceda\n2) ΣD = {0,1,2,3,4,5,6,7,8,9} - abeceda číslic v desiatkovej sústave\n3) B = {0,1} binárna abeceda\n4) R = {I,V, X, L,C,D,M} - abeceda rímskych číslic\n5) VS - slovník slovenského jazyka, obsahuje všetky slovenské slová (všimnite si, že slovenské slovo, napr. včera je v abecede VS v roli symbolu, písmena)\n6) Š = { ←,→,↖,↗,↑,↓,↔,↕,↙,↘ } - abeceda šípok\n7) D - abeceda dopravných značiek</string>
    <string name="slovo_retazec_vysvetlenie">Slovom (alebo reťazcom) nad danou abecedou rozumieme ľubovoľnú konečnú postupnosť písmen (symbolov abecedy). Postupnosť, ktorá neobsahuje žiadny symbol, teda prázdnu postupnosť, nazývame prázdnym slovom (prázdnym reťazcom). Prázdne slovo budeme označovať symbolom ε.</string>
    <string name="priklad_slovo_retazec">1) Tabuľa, projektor, bábätko, … slovenské slová vytvorené nad abecedou ∑S\n2) Každé písmeno abecedy je zároveň aj slovom\n3) Čísla v desiatkovej sústave sú slová nad abecedou ∑D = {0,1,2,3,4,5,6,7,8,9}. Napríklad čísla 125, 3406, 22444\n4) Binárne čísla sú slová nad abecedou {0,1}, napríklad binárne čísla 1010, 11\n5) Rímske čísla, napríklad IV, DVI sú príkladmi slov nad abecedou R= {I,V,X,L,C,D,M}\n6)Reťazec 😆😀😗🥰😚 je slovo nad abecedou S = { 😆,😀,😗,🥰,😚,😟,🤯,😰 }\n7) Reťazec: Včera výdatne pršalo. - je slovo nad abecedou VS, slovníkom slovenského jazyka (Tieto slová sme zvyknutí nazývať vetami, písať ich s veľkým začiatočným písmenom a ukončovať bodkou)</string>
    <string name="dlzka_slova_vysvetlenie">Dĺžka slova je nezáporné celé číslo, ktoré udáva počet symbolov (písmen) v slove. Dĺžku slova x značíme ako |x|. Teda ak x = a₁a₂... je slovo nad abecedou Σ a aⁱ∈Σ pre každé i, 1 ≤ i ≤ n , tak |x| = n. Prázdny reťazec má nulovú dĺžku, |ε| = 0. Slovo zložené z i výskytov rovnakého symbolu a budeme označovať aⁱ . Napríklad a³= aaa, b¹= b. Špeciálne pre i=0 a ľubovoľné písmeno c platí c⁰= ε. (Slovo zložené z nula výskytov písmena c je prázdne slovo.)</string>
    <string name="priklad_dlzka_slova">1) Slovo abbbccab nad abecedou {a, b, c} má dĺžku 8. Zapisujeme |abbbccab |= 8. \n2) Slovo ab³c²ab nad abecedou {a, b, c} má dĺžku 8, | ab³c²ab |= 8. \n3) Slovo DVI nad abecedou R= {I,V,X,L,C,D,M} má dĺžku 3, | DVI |=3. \n4) Slovo mama nad slovenskou abecedou ΣS má dĺžku 4, |mama|=4. \n5) Slovo mama nad abecedou VS, teda nad slovenským slovníkom, má dĺžku 1, |mama|=1. \n6) Je daná abeceda Σ= {a, b, c, d}. Slová nad abecedou Σ budú napríklad abbca, bda, b...</string>
    <string name="jazyk_vysvetlenie">Jazyk nad abecedou Σ je ľubovoľná množina slov nad touto abecedou. Množinu všetkých slov nad abecedou Σ nazývame univerzálny jazyk a označujeme ju Σ*. Do tohto jazyka patrí aj prázdne slovo. Ďalšími špeciálnymi jazykmi sú prázdny jazyk ∅, abeceda Σ a jazyk obsahujúci len prázdne slovo, ktorý zapíšeme {ε}. (Všimnite si rozdiel medzi jazykmi ∅ a {ε}).</string>
    <string name="priklad_jazyk">1) L = {aa, bb, cc} a L = {a, b, c} sú konečné jazyky nad abecedou Σ = {a, b, c} . \n2) Jazyk zátvoriek Lz = { (ⁱ )ⁱ : i >1} nad abecedou obsahujúcou len dva znaky: otváraciu zátvorku ( a zatváraciu zátvorku ). \n3) Jazyk Lb = { beginⁱ endⁱ : i >1} nad abecedou obsahujúcou symboly begin a end. \n4) Nech L = { ww: w je reťazec nad {0, 1} }. Do tohto jazyka patria slová zložené z dvoch rovnakých slov, napríklad 001001, 0000, ... \n5) Nech jazyk L = {a^p : |a| = p, p je prvočíslo} . Jazyk obsahuje všetky reťazce zo symbolov a prvočíselnej dĺžky. \n6) P je množina párnych čísel. Dekadický zápis párnych čísel nad abecedou  = {0,1,2,3,4,5,6,7,8,9} obsahuje všetky čísla ukončené číslicami 0, 2, 4, 6, 8. Je to jazyk, ktorý formálne zapíšeme takto: PΣ ={w0: w Σ*}∪{w2: w Σ*}∪{w4: w Σ*}∪{w6: wΣ *}∪{w8: w Σ*}. Všimnite si, že v prvej zátvorke sú reťazce číslic ukončené nulou, teda sú tam zapísané všetky čísla končiace na nulu a podobne je tomu v ďalších zátvorkách. Binárny zápis párnych čísel určuje jazyk P^B ={0}∪{1w0: w B*} nad abecedou B= {0,1}.</string>
    <string name="zjednotenie_vysvetlenie">Zjednotenie jazykov L₁ a L₂ je jazyk, ktorý obsahuje všetky slová, ktoré sa nachádzajú aspoň v jednom z jazykov L₁ a L₂. Matematický zápis zjednotenia je L₁ ∪ L₂. Vlastnosti zjednotenia sú komutatívnosť (L₁ ∪ L₂ = L₂ ∪ L₁) ako aj asociatívnosť((L₁ ∪ L₂)  L₃ = L₁ ∪ (L₂ ∪ L₃) = L₁ ∪ L₂ ∪ L₃).</string>
    <string name="priklad_zjednotenie">1) Nech P^B a Pⁿ sú jazyky reprezentujúce binárne zápisy párnych a nepárnych čísel P^B ={0} ∪ {1w0: w ∈ B*} nad abecedou B= {0,1} Pⁿ ={1} ∪ {1w1: w ∈ B*} nad abecedou B= {0,1}. Ich zjednotením je jazyk L= P^B ∪ Pⁿ = {1w: w ∈ B*} ∪ {0} reprezentujúci binárne zápisy všetkých prirodzených čísel. \n2) Jazyk L₁ = a*b, L₂ = b*a. Zjednotenie jazykov L₁ ∪ L₂ = a*b ∪ b*a. \n3) L₁ = {aw: w ∈ {a,b,c}*}, L₂ = {wa: w ∈ {a,b,c}*}. Zjednotenie bude L₁ ∪ L₂ = {aw: w ∈ {a,b,c}*} ∪ {wa: w ∈ {a,b,c}*}, obsahuje všetky slová začínajúce alebo končiace písmenom a. \n4) L₁ = {aa, b, abbb, abb} L₂ = {a+b, a++b, ba+a, aa, abbb} L₁ ∪ L₂ = { aa, b, abbb, abb, a+b, a++b, ba+a}</string>
    <string name="prienik_vysvetlenie">Prienik dvoch jazykov je jazyk, ktorý obsahuje iba tie slová, ktoré patria súčasne do každého z týchto jazykov. Matematický zápis prieniku je L₁ ∩ L₂.</string>
    <string name="priklad_prienik">1) Máme jazyky L₁ = {aa, b, abbb, abb} a L₂ = {a+b, a++b, ba+a, aa, abbb}. Prienik jazykov L₁ a L₂ bude jazyk L₁ ∩ L₂ = {aa, abbb} . \n2) Máme jazyky L₁ = {aw: w {a,b,c}*}, L₂ = {wa: w {a,b,c}*}. Ich prienik bude L₁∩ L₂ = {awa: w {a,b,c}*} ∪ {a}. Výsledkom operácie je jazyk, ktorý obsahuje slová začínajúce a končiace písmenom a.</string>
    <string name="doplnok_vysvetlenie">Doplnok jazyka L nad abecedou Σ je množina všetkých slov nad abecedou Σ, ktoré nie sú prvkami jazyka L. Doplnok jazyka označujeme L^c.</string>
    <string name="priklad_doplnok">1) Máme jazyk L = {a²ⁱ : i ≥ 0} nad abecedou Σ={a}. Doplnok jazyka L nad Σ={a} je jazyk L^c = {a²ⁱ+1: i ≥ 0}. Jazyk L obsahuje všetky slová párnej dĺžky a jeho doplnok. Jazyk L^r nad abecedou {a} obsahuje slová nepárnej dĺžky. \n2) Máme jazyk L = {a²ⁱ : i ≥ 0} nad abecedou Σ={a,b}. Jazyk L je rovnaký ako v predchádzajúcom príklade, ale teraz pracujeme s dvojpísmenovou abecedou {a,b}. Doplnok jazyka L v tomto prípade obsahuje okrem reťazcov a nepárnej dĺžky aj slová obsahujúce aspoň jedno písmeno b. Formálny zápis: L^c = {a²ⁱ+1: i ≥ 0} ∪ {a,b}*b{a,b}*.</string>
    <string name="za_vysvetlenie">● Od konečného automatu sa odlišuje tým, že má o jednu pásku viac – zásobník\n● Zásobníkový automat pracuje súčasne so symbolmi na zásobníku aj so symbolmi slova ω alebo jazyka L, ktoré sa nachádzajú na vstupnej páske\n● platia pravidlá determinizmu a nedeterminizmu ako pri konečných automatoch\n● Do zásobníka sa symboly vkladajú "zvrchu"\n● Platí "last in - first out", teda symbol, ktorý bol uložený do zásobníka ako posledný, bude vybratý ako prvý</string>
    <string name="za_definicia">● Q - konečná neprázdna množina stavov zásobníkového automatu\n● Σ - konečná neprázdna množina vstupných symbolov zásobníkového automatu\n● Γ - konečná neprázdna množina zásobníkových symbolov\n● δ - prechodová funkcia δ: Q x (Σ ∪ {ε}) x Γ → P(Q x Γ*)\n● q₀ - počiatočný stav, q₀ ∈ Q\n● Z - počiatočný symbol na zásobníku, Z ∈ Γ\n● F - množina koncových stavov F ⊆ Q
</string>
    <string name="za_konfiguracia">Trojica (q, ω, W) ∈ Q x Σ* x Γ*\n● q je aktuálny stav\n● ω zostávajúce slovo, ktoré ešte treba prečítať zo vstupnej pásky\n● W ∈ Γ* v konfigurácii reprezentuje aktuálny symbol na vrchu zásobníka\n\nAk ZA = ({q₀, q₁}, {b, c}, {Z₀, x}, δ, q₀, Z₀, ∅), potom konfigurácie zásobníkového automatu ZA sú napr. (q₀, bbcbb, xxxZ), (q₁, b, Z)
</string>
    <string name="za_rozpoznany">ZA = (O, Σ, Γ, δ, q₀, Z₀, ∅)\n\nSlovo je prijaté, ak automat spracoval slovo na vstupnej páske a má úplne prázdny zásobník. V tomto prípade je množina koncových stavov F "nepodstatná" a kladieme F = ∅.\n\n● F = ∅ je uvedené aj v sedmici definujúcej zásobníkový automat.\n\n● Jazyk prijímaný ZA:\n L(ZA) = {ω | ∃q ∈ Q; (q₀, ω, Z) |-ZA (q, ε, ε)}\n\n\nZA = (Q, Σ, Γ, δ, q₀, Z₀, F)\nSlovo je prijaté, ak automat spracoval slovo na vstupnej páske a ocitne sa v niektorom z koncových stavov\n\nL(ZA) = {ω | ∃qf ∈ F, s ∈ Γ*; (q₀, ω, Z) |-ZA (q, ε, s)}
</string>
    <string name="za_priklad">Zadanie:\n\nZostrojte zásobníkový automat, ktorý rozpoznáva jazyk L={aⁱbⁱ; i≥1} koncovými stavmi.\n\nRiešenie:\n\nČinnosť požadovaného zásobníkového automatu bude nasledovná: pokiaľ bude na vstupnej páske automat čítať symbol a, ostane jeho stav nezmenený, zotrvá v stave q₀ a za každý prečítaný symbol a uloží do zásobníka jeden symbol a. Týmto postupom dosiahneme, že počet symbolov a prečítaných na páske sa bude rovnať počtu symbolov a zapísaných do zásobníku. Pre prechodovú funkciu teda platí:\n\nδ(q₀,a,Z₀) = {(q₀,Z₀a)}         δ(q₀,a,a)= {(q₀,aa)}\n\nVšimnite si, že pridávanie symbolu na zásobníkovej páske je riešené spôsobom, že sa pôvodný symbol Z₀ nahradí reťazcom Z₀a. Pri prečítaní prvého symbolu b zmení zásobníkový automat stav na q₁ a zo zásobníka sa vymaže jeden symbol a,\n\nδ(q₀,b,a)= {(q₁,ε)}\n\nV stave q₁ zásobníkový automat zotrvá, pokým bude čítať symboly b, a zo zásobníka vždy odoberie symbol a,\n\nδ(q₁,b,a)= {(q₁,ε)}\n\nAk ostane v zásobníku iba symbol Z₀, prejde zásobníkový automat do koncového stavu, pretože práve prečítal reťazec v tvare aⁿbⁿ. \n\nVýsledný zásobníkový automat má tvar:\n\nZA = (Q, Σ, Γ, δ, q₀, Z₀, F), kde:\nQ={q₀,q₁,q₂},\nΣ={a,b},\nΓ={Z₀,a},\nF={q₂},\n\nPrechodová funkcia je v tvare:\n\nδ(q₀,a,Z₀) = {(q₀,Z₀a)}\nδ(q₀,a,a)= {(q₀,aa)}\nδ(q₀,b,a)= {(q₁,ε)}\nδ(q₁,b,a)= {(q₁,ε)}\nδ(q₁,ε,Z₀)= {(q₂,Z₀)}\n\nUkážka akceptujúceho výpočtu v prípade vstupného slova a³b³:\n\n(q₀,a³b³,Z₀) ├(q₀,a²b³,Z₀a) ├ (q₀,ab³,Z₀aa) ├ (q₀,b³,Z₀a³) ├ (q₁,b²,Z₀aa)├(q₁,b,Z₀a) ├ (q₁,ε,Z₀) ├ (q₂,ε,Z₀)\n\nPo spracovaní slova je zásobníkový automat v koncovom stave v akceptujúcej konfigurácii.</string>
</resources>