<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.marekguran.tzi.teoria.Abeceda"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_abeceda" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.marekguran.tzi.teoria.KonecneAutomaty"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_konecne_automaty" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.marekguran.tzi.teoria.ZasobnikoveAutomaty"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_zasobnikovy_automat" />

    <fragment
        android:id="@+id/nav_gramatika"
        android:name="com.marekguran.tzi.teoria.Gramatika"
        android:label="Gramatika"
        tools:layout="@layout/fragment_gramatika" />
</navigation>