<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.gallery.GalleryFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/za_nadpis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="Zásobníkový automat (ZA)"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/za_vysvetlenie_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/za_vysvetlenie"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/za_nadpis" />

            <ImageView
                android:id="@+id/za_obrazok"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/za_obrazok"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                app:layout_constraintTop_toBottomOf="@id/za_vysvetlenie_text"/>

            <TextView
                android:id="@+id/za_definicia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:text="Definícia"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/za_obrazok" />

            <TextView
                android:id="@+id/za_definicia_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/za_definicia"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/za_definicia" />

            <TextView
                android:id="@+id/za_konfiguracia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:text="Konfigurácia"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/za_definicia_text" />

            <TextView
                android:id="@+id/za_konfiguracia_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/za_konfiguracia"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/za_konfiguracia" />

            <TextView
                android:id="@+id/za_rozpoznany"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:text="Zásobníkový automat rozpoznávajúci koncovým stavom"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/za_konfiguracia_text" />

            <TextView
                android:id="@+id/za_rozpoznany_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/za_rozpoznany"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/za_rozpoznany" />

            <TextView
                android:id="@+id/priklad_za_nadpis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:text="Príklad"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/za_rozpoznany_text" />

            <androidx.cardview.widget.CardView
                android:id="@+id/priklad_za"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.Material3.CardView.Filled"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                app:cardCornerRadius="20dp"
                app:layout_constraintTop_toBottomOf="@id/priklad_za_nadpis">

                <TextView
                    android:id="@+id/zadanie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/za_priklad"
                    android:textColor="?attr/colorSecondary"
                    android:textSize="18sp" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="\n\n"
                app:layout_constraintTop_toBottomOf="@id/priklad_za"/>



        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>